--- a/SQlite.Tests.WindowsPhone/App.xaml
+++ b/SQlite.Tests.WindowsPhone/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application
-    x:Class="SQlite.Tests.WindowsPhone.App"
+    x:Class="SQLite.Tests.WindowsPhone.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -7,7 +7,7 @@
 
     <!--Application Resources-->
     <Application.Resources>
-        <local:LocalizedStrings xmlns:local="clr-namespace:SQlite.Tests.WindowsPhone" x:Key="LocalizedStrings"/>
+        <local:LocalizedStrings xmlns:local="clr-namespace:SQLite.Tests.WindowsPhone" x:Key="LocalizedStrings"/>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
