--- a/SQlite.Tests.WindowsPhone/MainPage.xaml
+++ b/SQlite.Tests.WindowsPhone/MainPage.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="SQlite.Tests.WindowsPhone.MainPage"
+    x:Class="SQLite.Tests.WindowsPhone.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
